<resources>
    <string name="app_name">SOFRA APP</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="notification">Notification</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="order_food">order food</string>
    <string name="sell_food">sell food</string>
    <string name="emial">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="signin">sign in</string>
    <string name="forget_your_password">forget your password</string>
    <string name="restaurant_name">restaurant name</string>
    <string name="delivery_time">Delivery time</string>
    <string name="city">city</string>
    <string name="region">region</string>
    <string name="confirm_password">confirm_password</string>
    <string name="minimum_order">Minimum Order</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="follow">follow</string>
    <string name="information_contact">information contact</string>
    <string name="phone">phone</string>
    <string name="whats">whats</string>
    <string name="store_image">Store Image</string>
    <string name="name">name</string>
    <string name="profile_image">profile image</string>
    <string name="signup">signup</string>
    <string name="more">more</string>
    <string name="profile">profile</string>
    <string name="order">order</string>
    <string name="choose_restaurant">choose restaurant</string>
    <string name="information">information</string>
    <string name="commentsandevaluation">comment and evaluation</string>
    <string name="listoffood">list of foods</string>
    <string name="private_request">private request</string>
    <string name="the_required_number">the required number</string>
    <string name="_1">1</string>
    <string name="confirmation_order">confirmation order</string>
    <string name="add_more_order">add more order</string>
    <string name="number">number</string>
    <string name="total">total</string>
    <string name="offer">offer</string>
    <string name="meals">meals</string>
    <string name="photo_food">photo food</string>
    <string name="add">add</string>
    <string name="share_your_comment_or_review">share your comment or review</string>
    <string name="add_coment_or_review">add coment or review</string>
    <string name="choose_review">choose review</string>
    <string name="add_review">add review</string>
    <string name="_0">0</string>
    <string name="add_photo">add photo</string>
    <string name="description">description</string>
    <string name="price">price</string>
    <string name="price_offer">price offer</string>
    <string name="preparing_time">preparing_time</string>
    <string name="pending_orders">pending order</string>
    <string name="current_order">current order</string>
    <string name="completed_order">completed order</string>
    <string name="cancel">cancel</string>
    <string name="offers">offers</string>
    <string name="contact_us">contact us</string>
    <string name="about_app">about app</string>
    <string name="change_password">change password</string>
    <string name="log_out">log out</string>
    <string name="comments_and_evaluation">comments and evaluation</string>
    <string name="detail">detail</string>
    <string name="rae_you_sure_you_want_to_exit">are you sure you want to exit ?</string>
    <string name="detail_offer">detail offer</string>
    <string name="buy_now">Buy Now</string>
    <string name="new_offer">New Offer</string>
    <string name="offer_photo">Offer Photo</string>
    <string name="start_at">starting at</string>
    <string name="ending_at">ending at</string>
    <string name="add_new_offer">add new offer</string>
    <string name="Edit">edit</string>
    <string name="accepted">accepted</string>
    <string name="call">call</string>
    <string name="confirm_delivery">confirm delivery</string>
    <string name="state">state</string>
    <string name="update">update</string>
    <string name="review">review</string>
    <string name="enter_your_email">enter your email</string>
    <string name="send">send</string>
    <string name="new_password">new password</string>
    <string name="ocnfirm_new_password">confirm new password</string>
    <string name="code">code</string>
    <string name="enter_your_code">enter your code</string>
    <string name="complaint">complaint</string>
    <string name="suggestion">suggestion</string>
    <string name="inquiry">inquiry</string>
    <string name="who_are_we">who are we ?</string>
    <string name="reason_for_cancellation">reason for cancellation</string>
    <string name="please_enter_reason_for_cancellation">please enter reason for cancellation</string>
    <string name="address">address</string>
    <string name="enter">enter</string>
    <string name="paying_off">paying off</string>
    <string name="patment_on_receipt">patment on receipt</string>
    <string name="total_payment">total payment</string>
    <string name="payment_online">payment online</string>
    <string name="order_detail">order detail</string>
    <string name="x_cancel">x cancel</string>
    <string name="accept">accept</string>
    <string name="commission">commission</string>

</resources>
