<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.sofraapp.view.fragment.ui.home.home_fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_order"
        android:name="com.example.sofraapp.view.fragment.ui.order.OrderFragment"
        android:label="@string/order"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.sofraapp.view.fragment.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.example.sofraapp.view.fragment.ui.more.MoreFragment"
        android:label="@string/more"
        tools:layout="@layout/fragment_profile" />
</navigation>