<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_30dp"
        android:text="@string/contact_us"
        android:textSize="@dimen/dim_25sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dim_32dp"
        android:id="@+id/contact_us_tv"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_us_tv"
        android:background="@drawable/shadow_rectangle_grey"
        android:layout_marginStart="@dimen/dim_32dp"
        android:layout_marginEnd="@dimen/dim_32dp"
        android:layout_marginTop="@dimen/dim_32dp"
        android:inputType="text"
        android:hint="@string/name"
        android:paddingStart="@dimen/dim_8dp"
        android:id="@+id/contact_us_et_name"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_us_et_name"
        android:background="@drawable/shadow_rectangle_grey"
        android:layout_marginStart="@dimen/dim_32dp"
        android:layout_marginEnd="@dimen/dim_32dp"
        android:layout_marginTop="@dimen/dim_16dp"
        android:inputType="textEmailAddress"
        android:hint="@string/emial"
        android:paddingStart="@dimen/dim_8dp"
        android:id="@+id/contact_us_et_email"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_us_et_email"
        android:background="@drawable/shadow_rectangle_grey"
        android:layout_marginStart="@dimen/dim_32dp"
        android:layout_marginEnd="@dimen/dim_32dp"
        android:layout_marginTop="@dimen/dim_16dp"
        android:hint="@string/phone"
        android:paddingStart="@dimen/dim_8dp"
        android:inputType="phone"
        android:id="@+id/contact_us_et_phone"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_us_et_phone"
        android:background="@drawable/shadow_rectangle_grey"
        android:layout_marginStart="@dimen/dim_32dp"
        android:layout_marginEnd="@dimen/dim_32dp"
        android:layout_marginTop="@dimen/dim_16dp"
        android:hint="@string/description"
        android:paddingStart="@dimen/dim_8dp"
        android:inputType="text"
        android:id="@+id/contact_us_et_desc"
        />


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_40dp"
            app:layout_constraintTop_toBottomOf="@id/contact_us_et_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            android:layout_margin="@dimen/dim_32dp"
            android:id="@+id/contact_us_rg">

            <RadioButton
                android:layout_width="@dimen/dim_110dp"
                android:layout_height="@dimen/dim_40dp"
                android:text="@string/complaint"
                android:textSize="@dimen/dim_15sp"
                android:id="@+id/contact_us_rg_complain"/>

            <RadioButton
                android:layout_width="@dimen/dim_110dp"
                android:layout_height="@dimen/dim_40dp"
                android:text="@string/suggestion"
                android:textSize="@dimen/dim_15sp"
                android:id="@+id/contact_us_rg_suggestion" />

            <RadioButton
                android:id="@+id/contact_us_rg_inquiry"
                android:layout_width="@dimen/dim_110dp"
                android:layout_height="@dimen/dim_40dp"
                android:textSize="@dimen/dim_15sp"
                android:text="@string/inquiry" />

        </RadioGroup>

    <Button
        android:layout_width="@dimen/dim_150dp"
        android:layout_height="@dimen/dim_40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_us_rg"
        android:background="@drawable/btn"
        android:textSize="@dimen/dim_25sp"
        android:id="@+id/contact_us_btn_send"
        android:textColor="@color/white"
        android:text="@string/send"
        android:layout_marginTop="@dimen/dim_32dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>