<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_30dp"
        android:id="@+id/offer_restaurant_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dim_16dp"
        android:text="@string/offer_photo"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/dim_25sp"
        android:gravity="center"
        />
    <ImageView
        android:layout_width="@dimen/dim_120dp"
        android:layout_height="@dimen/dim_120dp"
        android:id="@+id/offer_restaurant_iv_photo"
        app:layout_constraintTop_toBottomOf="@id/offer_restaurant_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:background="@drawable/shadow_rectangle"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_30dp"
        android:id="@+id/offer_restaurant_et_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/offer_restaurant_iv_photo"
        android:layout_margin="@dimen/dim_16dp"
        android:background="@drawable/shadow_rectangle"
        android:layout_marginTop="@dimen/dim_16dp"
        android:hint="@string/name"
        android:paddingStart="@dimen/dim_8dp"
        android:textColor="@color/black"
        android:textSize="@dimen/dim_15sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_150dp"
        android:id="@+id/offer_restaurant_et_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/offer_restaurant_et_name"
        android:layout_margin="@dimen/dim_16dp"
        android:background="@drawable/shadow_rectangle"
        android:layout_marginTop="@dimen/dim_16dp"
        android:hint="@string/description"
        android:paddingStart="@dimen/dim_8dp"
        android:textColor="@color/black"
        android:textSize="@dimen/dim_15sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_30dp"
        android:id="@+id/offer_restaurant_et_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/offer_restaurant_et_desc"
        android:layout_margin="@dimen/dim_16dp"
        android:background="@drawable/shadow_rectangle"
        android:layout_marginTop="@dimen/dim_16dp"
        android:hint="@string/price"
        android:paddingStart="@dimen/dim_8dp"
        android:textColor="@color/black"
        android:textSize="@dimen/dim_15sp"
        />
    <EditText
        android:layout_width="@dimen/dim_150dp"
        android:layout_height="@dimen/dim_40dp"
        android:id="@+id/offer_restaurant_et_satrtAt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/offer_restaurant_et_price"
        android:layout_marginStart="@dimen/dim_8dp"
        android:paddingTop="@dimen/dim_8dp"
        app:layout_constraintEnd_toStartOf="@id/offer_restaurant_et_EndingAt"
        android:inputType=""
        android:background="@drawable/shadow_rectangle_grey"
        android:layout_marginTop="@dimen/dim_50dp"
        android:hint="@string/start_at"
        android:paddingStart="@dimen/dim_8dp"
        android:drawableStart="@drawable/ic_date"
        android:textColor="@color/black"
        android:textSize="@dimen/dim_15sp"
        />

    <EditText
        android:layout_width="@dimen/dim_150dp"
        android:layout_height="@dimen/dim_40dp"
        android:id="@+id/offer_restaurant_et_EndingAt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/offer_restaurant_et_price"
        android:layout_marginEnd="@dimen/dim_8dp"
        android:paddingTop="@dimen/dim_8dp"
        app:layout_constraintStart_toEndOf="@id/offer_restaurant_et_satrtAt"
        android:inputType="date"
        android:background="@drawable/shadow_rectangle_grey"
        android:layout_marginTop="@dimen/dim_50dp"
        android:hint="@string/ending_at"
        android:paddingStart="@dimen/dim_8dp"
        android:drawableStart="@drawable/ic_date"
        android:textColor="@color/black"
        android:textSize="@dimen/dim_15sp"
        />

    <Button
        android:layout_width="@dimen/dim_150dp"
        android:layout_height="@dimen/dim_40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/offer_restaurant_btn_add"
        app:layout_constraintTop_toBottomOf="@id/offer_restaurant_et_satrtAt"
        android:layout_marginTop="@dimen/dim_32dp"
        android:background="@drawable/btn"
        android:textColor="@color/white"
        android:text="@string/add"
        android:textSize="@dimen/dim_25sp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>