<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/loginbg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_40dp"
        android:text="@string/enter_your_email"
        android:textColor="@color/white"
        android:textSize="@dimen/dim_25sp"
        android:gravity="center"
        android:id="@+id/reset_password_tv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dim_16dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_40dp"
        android:background="@drawable/rectangle_white"
        android:id="@+id/reset_password_et_email"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_tv"
        android:layout_margin="@dimen/dim_32dp"
        android:hint="@string/emial"
        android:inputType="textEmailAddress"
        />

    <Button
        android:layout_width="@dimen/dim_150dp"
        android:layout_height="@dimen/dim_40dp"
        android:id="@+id/reset_password_btn_send"
        android:background="@drawable/btn"
        android:text="@string/send"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/reset_password_et_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dim_32dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>