<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/loginbg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_40dp"
        android:text="@string/enter_your_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/dim_32dp"
        android:gravity="center"
        android:textSize="@dimen/dim_25sp"
        android:textStyle="bold"
        android:id="@+id/new_password_tv_enter_code"
        />

    <EditText
        android:id="@+id/new_password_et_code"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_40dp"
        android:layout_margin="@dimen/dim_32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectangle_curved_white"
        android:hint="@string/code"
        android:paddingStart="@dimen/dim_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_password_tv_enter_code" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_40dp"
        android:text="@string/enter_your_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_password_et_code"
        android:layout_marginStart="@dimen/dim_32dp"
        android:layout_marginEnd="@dimen/dim_32dp"
        android:layout_marginTop="@dimen/dim_50dp"
        android:gravity="center"
        android:textSize="@dimen/dim_25sp"
        android:textStyle="bold"
        android:id="@+id/new_password_tv_enter_pass"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_40dp"
        android:background="@drawable/rectangle_curved_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_password_tv_enter_pass"
        android:id="@+id/new_password_et_new_password"
        android:paddingStart="@dimen/dim_8dp"
        android:hint="@string/new_password"
        android:layout_margin="@dimen/dim_32dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_40dp"
        android:background="@drawable/rectangle_curved_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_password_et_new_password"
        android:id="@+id/new_password_et_confirm_password"
        android:paddingStart="@dimen/dim_8dp"
        android:hint="@string/ocnfirm_new_password"
        android:layout_margin="@dimen/dim_32dp"
        />

    <Button
        android:layout_width="@dimen/dim_150dp"
        android:layout_height="@dimen/dim_40dp"
        android:id="@+id/new_password_btn_send"
        android:background="@drawable/btn"
        android:text="@string/send"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/new_password_et_confirm_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dim_32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>